--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-language: ruby
+lenguage: ruby
 rvm:
--1.9.3
--2.0.0p274
+  - 1.9.3
+  - jruby-18mode # JRuby in 1.8 mode
+  - jruby-19mode # JRuby in 1.9 mode
+  - rbx-18mode
+  - rbx-19mode
+  - 1.8.7
